--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html> 
 <head>
 <title>To The Moon</title>
-<link rel="shortcut icon" type="image" href="C:\Users\Marinos\Desktop\FAPA\doge.jfif">
+<link rel="shortcut icon" type="image" href="https://github.com/MarinosX017gr/.github.io/blob/master/doge.jfif">
 </head>
   <style type="text/css">
       @font-face {
